# ubiquiti-unifi-blade-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  sidereal-plugin.yaml  stallari-plugin.yaml
src/ubiquiti_unifi_blade_mcp/: __init__.py  __main__.py  auth.py  client.py  formatters.py  models.py  server.py
tests/: conftest.py  test_client.py  test_formatters.py  test_meta.py  test_models.py  test_server.py
